--- a/web/package.json
+++ b/web/package.json
@@ -5,18 +5,22 @@
   "main": "./dist/bundle.js",
   "dependencies": {
     "@types/pouch-redux-middleware": "^0.5.5",
+    "@types/pouchdb": "^6.3.1",
     "@types/react-redux": "^5.0.12",
     "@types/react-textarea-autosize": "^4.3.1",
     "@types/redux": "^3.6.0",
+    "@types/uuid": "^3.4.3",
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.28.0",
     "node-static": "^0.7.9",
-    "pouch-redux-middleware": "^1.2.0",
+    "pouch-redux-middleware": "git+ssh://git@github.com:micimize/pouch-redux-middleware.git",
+    "pouchdb": "^6.3.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.6",
     "react-textarea-autosize": "^5.2.1",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^2.28.0",
