--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,6 @@
   "description": "React / TypeScript frontend",
   "main": "./dist/bundle.js",
   "dependencies": {
-    "@types/pouch-redux-middleware": "^0.5.5",
     "@types/pouchdb": "^6.3.1",
     "@types/react-redux": "^5.0.12",
     "@types/react-textarea-autosize": "^4.3.1",
@@ -13,7 +12,7 @@
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.28.0",
     "node-static": "^0.7.9",
-    "pouch-redux-middleware": "git+ssh://git@github.com:micimize/pouch-redux-middleware.git",
+    "pouch-redux-middleware": "git+ssh://git@github.com/micimize/pouch-redux-middleware.git",
     "pouchdb": "^6.3.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
