--- a/web/package.json
+++ b/web/package.json
@@ -4,15 +4,14 @@
   "description": "React / TypeScript frontend",
   "main": "./dist/bundle.js",
   "dependencies": {
-    "@types/pouchdb": "^6.3.1",
-    "@types/react-redux": "^5.0.13",
-    "@types/react-textarea-autosize": "^4.3.1",
-    "@types/redux": "^3.6.0",
-    "@types/uuid": "^3.4.3",
     "@types/html-webpack-plugin": "^2.28.0",
     "@types/node": "^8.0.9",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.13",
+    "@types/react-textarea-autosize": "^4.3.1",
+    "@types/redux": "^3.6.0",
+    "@types/uuid": "^3.4.3",
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.28.0",
     "node-static": "^0.7.9",
@@ -26,6 +25,20 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@types/pouchdb-adapter-fruitdown": "^6.1.1",
+    "@types/pouchdb-adapter-http": "^6.1.1",
+    "@types/pouchdb-adapter-idb": "^6.1.1",
+    "@types/pouchdb-adapter-leveldb": "^6.1.1",
+    "@types/pouchdb-adapter-localstorage": "^6.1.1",
+    "@types/pouchdb-adapter-memory": "^6.1.1",
+    "@types/pouchdb-adapter-node-websql": "^6.1.1",
+    "@types/pouchdb-adapter-websql": "^6.1.1",
+    "@types/pouchdb-browser": "^6.1.1",
+    "@types/pouchdb-core": "^6.1.9",
+    "@types/pouchdb-http": "^6.1.1",
+    "@types/pouchdb-mapreduce": "^6.1.2",
+    "@types/pouchdb-node": "^6.1.1",
+    "@types/pouchdb-replication": "^6.1.3",
     "@types/react-hot-loader": "^3.0.3",
     "@types/webpack": "^3.0.2",
     "@types/webpack-env": "^1.13.0",
@@ -45,12 +58,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Glavin001/react-hot-ts.git"
+    "url": "git+https://github.com/micimize/guided-topic-models.git"
   },
-  "author": "Glavin Wiechert",
+  "author": "Michael Joseph Rosenthal",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Glavin001/react-hot-ts/issues"
+    "url": "https://github.com/micimize/guided-topic-models/issues"
   },
-  "homepage": "https://github.com/Glavin001/react-hot-ts#readme"
+  "homepage": "https://github.com/micimize/guided-topic-models#readme"
 }
