--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -6,7 +6,7 @@
     "strictNullChecks": true,
     "module": "commonjs",
     "target": "es5",
-    "jsx": "react",
+    "jsx": "preserve",
     "lib": ["es2017", "es7", "dom"],
     "types": [
       "webpack-env",
