--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^5.0.6",
     "react-textarea-autosize": "^5.2.1",
     "redux": "^3.7.2",
+    "style-loader": "^0.19.0",
     "ts-loader": "^3.1.1",
     "uuid": "^3.1.0"
   },
