--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,10 @@
     "@types/react-textarea-autosize": "^4.3.1",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^3.4.3",
+    "css-loader": "^0.28.7",
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.7.2",
     "node-static": "^0.7.9",
     "pouch-redux-middleware": "git+ssh://git@github.com/micimize/pouch-redux-middleware.git",
     "pouchdb": "^6.3.4",
@@ -22,6 +24,8 @@
     "react-redux": "^5.0.6",
     "react-textarea-autosize": "^5.2.1",
     "redux": "^3.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
