--- a/web/package.json
+++ b/web/package.json
@@ -4,26 +4,38 @@
   "description": "React / TypeScript frontend",
   "main": "./dist/bundle.js",
   "dependencies": {
+    "@types/history": "^4.6.2",
     "@types/html-webpack-plugin": "^2.28.0",
     "@types/node": "^8.0.9",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.13",
+    "@types/react-router": "^4.0.19",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/react-router-redux": "^5.0.10",
     "@types/react-textarea-autosize": "^4.3.1",
     "@types/redux": "^3.6.0",
+    "@types/redux-router": "^1.0.43",
     "@types/uuid": "^3.4.3",
     "css-loader": "^0.28.7",
     "expose-loader": "^0.7.3",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.7.2",
     "node-static": "^0.7.9",
     "pouch-redux-middleware": "git+ssh://git@github.com/micimize/pouch-redux-middleware.git",
     "pouchdb": "^6.3.4",
+    "pouchdb-redux-helper": "^0.11.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.8",
     "react-textarea-autosize": "^5.2.1",
     "redux": "^3.7.2",
+    "redux-router": "^2.1.2",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "uuid": "^3.1.0"
