--- a/web/package.json
+++ b/web/package.json
@@ -7,8 +7,10 @@
     "@types/history": "^4.6.2",
     "@types/html-webpack-plugin": "^2.28.0",
     "@types/node": "^8.0.9",
+    "@types/query-string": "^5.0.1",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
+    "@types/react-infinite-scroller": "^1.0.4",
     "@types/react-redux": "^5.0.13",
     "@types/react-router": "^4.0.19",
     "@types/react-router-dom": "^4.2.3",
@@ -26,8 +28,10 @@
     "pouch-redux-middleware": "git+ssh://git@github.com/micimize/pouch-redux-middleware.git",
     "pouchdb": "^6.3.4",
     "pouchdb-redux-helper": "^0.11.0",
+    "query-string": "^5.0.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-infinite-scroller": "^1.1.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
