--- a/web/package.json
+++ b/web/package.json
@@ -2,14 +2,49 @@
   "name": "guided-topic-models",
   "version": "0.1.0",
   "description": "React / TypeScript frontend",
-  "main": "./dist/bundle.js",
+  "private": true,
   "dependencies": {
-    "@types/history": "^4.6.2",
-    "@types/html-webpack-plugin": "^2.28.0",
-    "@types/node": "^8.0.9",
-    "@types/query-string": "^5.0.1",
-    "@types/react": "^16.0.25",
-    "@types/react-dom": "^16.0.3",
+    "antd": "^3.2.3",
+    "react": "^16.2.0",
+    "react-app-rewire-hot-loader": "^1.0.0",
+    "react-app-rewired": "^1.4.1",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "lateset",
+    "react-scripts": "^1.0.14",
+    "react-scripts-ts-antd": "2.13.2",
+
+
+
+    "history": "^4.7.2",
+    "pouch-redux-middleware": "git+ssh://git@github.com/micimize/pouch-redux-middleware.git",
+    "pouchdb": "^6.3.4",
+    "pouchdb-redux-helper": "^0.11.0",
+    "query-string": "^5.0.1",
+    "react-infinite-scroller": "^1.1.1",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "react-textarea-autosize": "^5.2.1",
+    "redux": "^3.7.2",
+    "redux-router": "^2.1.2",
+    "uuid": "^3.1.0",
+
+    "redux-thunk": "^2.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts-ts-antd start",
+    "build": "react-scripts-ts-antd build",
+    "test": "react-scripts-ts-antd test --env=jsdom",
+    "eject": "react-scripts-ts-antd eject"
+  },
+  "devDependencies": {
+    "@types/jest": "^22.1.4",
+    "@types/node": "^9.4.6",
+    "@types/react": "^16.0.40",
+    "@types/react-dom": "^16.0.4",
+
+    "@types/react-hot-loader": "^3.0.6",
     "@types/react-infinite-scroller": "^1.0.4",
     "@types/react-redux": "^5.0.13",
     "@types/react-router": "^4.0.19",
@@ -19,63 +54,11 @@
     "@types/redux": "^3.6.0",
     "@types/redux-router": "^1.0.43",
     "@types/uuid": "^3.4.3",
-    "css-loader": "^0.28.7",
-    "expose-loader": "^0.7.3",
-    "history": "^4.7.2",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.7.2",
-    "node-static": "^0.7.9",
-    "pouch-redux-middleware": "git+ssh://git@github.com/micimize/pouch-redux-middleware.git",
-    "pouchdb": "^6.3.4",
-    "pouchdb-redux-helper": "^0.11.0",
-    "query-string": "^5.0.1",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-infinite-scroller": "^1.1.1",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
-    "react-textarea-autosize": "^5.2.1",
-    "redux": "^3.7.2",
-    "redux-router": "^2.1.2",
-    "redux-thunk": "^2.2.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "uuid": "^3.1.0"
+
+    "typescript": "^2.7.2",
+    "ts-node": "^3.2.0"
   },
-  "devDependencies": {
-    "@types/pouchdb-adapter-fruitdown": "^6.1.1",
-    "@types/pouchdb-adapter-http": "^6.1.1",
-    "@types/pouchdb-adapter-idb": "^6.1.1",
-    "@types/pouchdb-adapter-leveldb": "^6.1.1",
-    "@types/pouchdb-adapter-localstorage": "^6.1.1",
-    "@types/pouchdb-adapter-memory": "^6.1.1",
-    "@types/pouchdb-adapter-node-websql": "^6.1.1",
-    "@types/pouchdb-adapter-websql": "^6.1.1",
-    "@types/pouchdb-browser": "^6.1.1",
-    "@types/pouchdb-core": "^6.1.9",
-    "@types/pouchdb-http": "^6.1.1",
-    "@types/pouchdb-mapreduce": "^6.1.2",
-    "@types/pouchdb-node": "^6.1.1",
-    "@types/pouchdb-replication": "^6.1.3",
-    "@types/react-hot-loader": "^3.0.3",
-    "@types/webpack": "^3.0.2",
-    "@types/webpack-env": "^1.13.0",
-    "awesome-typescript-loader": "^3.1.3",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "source-map-loader": "^0.2.1",
-    "ts-node": "^3.2.0",
-    "typescript": "^2.3.3",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server",
-    "static": "static -at 0.0.0.0 dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/micimize/guided-topic-models.git"
