--- a/web/package.json
+++ b/web/package.json
@@ -5,32 +5,29 @@
   "private": true,
   "dependencies": {
     "antd": "^3.2.3",
+    "history": "^4.7.2",
+    "io-ts": "^1.0.5",
+    "pouch-redux-middleware": "git+ssh://git@github.com/micimize/pouch-redux-middleware.git",
+    "pouchdb": "^6.3.4",
+    "pouchdb-redux-helper": "^0.11.0",
+    "query-string": "^5.0.1",
     "react": "^16.2.0",
     "react-app-rewire-hot-loader": "^1.0.0",
     "react-app-rewired": "^1.4.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "lateset",
-    "react-scripts": "^1.0.14",
-    "react-scripts-ts-antd": "2.13.2",
-
-
-
-    "history": "^4.7.2",
-    "pouch-redux-middleware": "git+ssh://git@github.com/micimize/pouch-redux-middleware.git",
-    "pouchdb": "^6.3.4",
-    "pouchdb-redux-helper": "^0.11.0",
-    "query-string": "^5.0.1",
     "react-infinite-scroller": "^1.1.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
+    "react-scripts": "^1.0.14",
+    "react-scripts-ts-antd": "2.13.2",
     "react-textarea-autosize": "^5.2.1",
     "redux": "^3.7.2",
     "redux-router": "^2.1.2",
-    "uuid": "^3.1.0",
-
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts-antd start",
@@ -41,9 +38,22 @@
   "devDependencies": {
     "@types/jest": "^22.1.4",
     "@types/node": "^9.4.6",
+    "@types/pouchdb-adapter-fruitdown": "^6.1.1",
+    "@types/pouchdb-adapter-http": "^6.1.1",
+    "@types/pouchdb-adapter-idb": "^6.1.1",
+    "@types/pouchdb-adapter-leveldb": "^6.1.1",
+    "@types/pouchdb-adapter-localstorage": "^6.1.1",
+    "@types/pouchdb-adapter-memory": "^6.1.1",
+    "@types/pouchdb-adapter-node-websql": "^6.1.1",
+    "@types/pouchdb-adapter-websql": "^6.1.1",
+    "@types/pouchdb-browser": "^6.1.1",
+    "@types/pouchdb-core": "^6.1.9",
+    "@types/pouchdb-http": "^6.1.1",
+    "@types/pouchdb-mapreduce": "^6.1.2",
+    "@types/pouchdb-node": "^6.1.1",
+    "@types/pouchdb-replication": "^6.1.3",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
-
     "@types/react-hot-loader": "^3.0.6",
     "@types/react-infinite-scroller": "^1.0.4",
     "@types/react-redux": "^5.0.13",
@@ -54,11 +64,9 @@
     "@types/redux": "^3.6.0",
     "@types/redux-router": "^1.0.43",
     "@types/uuid": "^3.4.3",
-
-    "typescript": "^2.7.2",
-    "ts-node": "^3.2.0"
+    "ts-node": "^3.2.0",
+    "typescript": "^2.7.2"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/micimize/guided-topic-models.git"
