very old changes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6
+FROM tensorflow/syntaxnet
 
 ENV JOURNALDIR=$SYNTAXNETDIR/syntaxnet/journal
 
@@ -6,11 +6,11 @@ RUN mkdir -p $JOURNALDIR/src
 
 WORKDIR $JOURNALDIR
 
-COPY src ./src
-COPY data ./data
-COPY requirements.txt ./
-COPY wait-for-it.sh   ./
-COPY BUILD            ./
+COPY ./src ./src
+COPY ./data ./data
+COPY ./requirements.txt ./
+COPY ./wait-for-it.sh   ./
+COPY ./BUILD            ./
 
 #RUN apt-get install -y coreutils
 RUN python -m pip install -r requirements.txt
