very old changes

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,6 +4,10 @@ MAINTAINER Glavin Wiechert <glavin.wiechert@gmail.com>
 # Defines our working directory in container
 WORKDIR /usr/src/app
 
+RUN apk add --no-cache git
+
+RUn mkdir -p /root/.npm/_git-remotes/
+
 COPY package.json ./
 RUN npm install
 
